A lot of things have been added to resouceBundles

--- a/src/main/resources/dict_ru.properties
+++ b/src/main/resources/dict_ru.properties
@@ -1,6 +1,7 @@
 # main window
 mw_title = Калькулятор
 
+
 # menu
 menu_main = Главная
 menu_history = История
@@ -12,3 +13,63 @@ menu_save = Сохранить...
 menu_exit = Выход
 menu_en = Англ
 menu_ru = Рус
+
+
+# history
+history_title = История
+history_table_column = Операция
+history_info_title = Менеджер операций
+history_info_body = История операция пуста. Нет данных для сохранения.
+
+
+# about
+about_title = О программе
+about_version = Версия
+about_home = Домашняя страница:
+about_credits = Ресурсы:
+
+
+# settings
+settings_title = Настройки
+settings_calculations = Вычисления
+settings_scale = Кол-во знаков после запятой:
+settings_rm = Режим округления:
+settings_io = Ввод/вывод
+settings_sorting_order = Порядок сортировки операций:
+settings_gui = Графический интерфейс
+settings_sound = Вкл/выкл звук
+settings_debugging = Отладка
+settings_equals_button = Блокировить кнопку "Равно" при ошибке
+
+
+# help
+help_title = Справка
+help_menu = Горячие клавиши меню
+help_about = О программе: F1
+help_settings = Настройки: F2
+help_help = Справка: F3
+help_save = Сохранить: Ctrl+S
+help_exit = Выход: F12
+help_history = История: Ctrl+H
+help_clear_history = Очистить историю: Ctrl+Shift+D
+help_en = Переключиться на англ.: Ctrl+Shift+1
+help_ru = Переключиться на рус.: Ctrl+Shift+2
+
+help_memory = Горячие клавиши памяти
+help_memory_add = Добавить в память: Ctrl+P
+help_memory_subtract = Вычесть из памяти: Ctrl+Q
+help_memory_recall = Вызвать из памяти: Ctrl+R
+help_memory_clear = Очистить память: Ctrl+L
+
+help_operators = Горячие клавиши операторов
+help_operators_equals = Равно: Enter
+help_operators_sign = Сменить знак: F9
+help_operators_del = DEL: Backspace
+help_operators_ce = CE: Delete
+help_operators_c = C: Escape
+help_operators_percent = Процент: Shift+5
+help_operators_1x = 1/x: R
+help_operators_power = x^2: Q
+help_operators_root = 2√x: Shift+2
+
+
