Values of enums have been added to resourceBundles

--- a/src/main/resources/dict_ru.properties
+++ b/src/main/resources/dict_ru.properties
@@ -73,3 +73,18 @@ help_operators_power = x^2: Q
 help_operators_root = 2√x: Shift+2
 
 
+# enum: historySortingOrder
+history_sorting_order_ftl = ПЕРВЫЙ -> ПОСЛЕДНИЙ
+history_sorting_order_ltf = ПОСЛЕДНИЙ -> ПЕРВЫЙ
+
+
+# enum: RoundingModeLocalized
+rm_ceiling = В ПОЛОЖ. СТОРОНУ
+rm_down = ВНИЗ
+rm_floor = В ОТРИЦ. СТОРОНУ
+rm_half_down = МАТ. ОКРУГЛЕНИЕ (ВНИЗ)
+rm_half_even = МАТ. ОКРУГЛЕНИЕ (К ЧЕТНОМУ)
+rm_half_up = МАТ. ОКРУГЛЕНИЕ (ВВЕРХ)
+rm_unnecessary = ОШИБКА ЕСЛИ ТРЕБУЕТСЯ ОКР.
+rm_up = ВВЕРХ
+
